--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     box-sizing: border-box;
 }
 
-/*                                                   CONFIGURAÇÃO DO CABEÇALHO
+/*                                   CONFIGURAÇÃO DO CABEÇALHO
 */      
 
 header{
@@ -74,11 +74,11 @@ p{
     font-size: 25px;
 }
 
-/*                                              PARTE DAS MIDIAS
+/*                                     PARTE DAS MIDIAS
 */
 
 #midias{
-    height: 200px;
+    height: 250px;
 }
 h2{
     font-family: var(--font02);
@@ -130,6 +130,9 @@ h2{
 #conhecimentos{
     height: 250px;
 }
+#conhecimentos > h2{
+    padding: 50px 0px;
+}
 
 /*                               PARTE DOS PROJETOS
 */
@@ -138,6 +141,15 @@ h2{
     background-color: black;
     color: white;
     height: 300px;
+}
+.caixas_projetos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.nomes_projetos{
+    font-family: var(--font02);
+    font-size: 10px;
 }
 
 /*                          PARTE DA EMPRESA
