--- a/style.css
+++ b/style.css
@@ -28,30 +28,31 @@
 /*                                   CONFIGURAÇÃO DO CABEÇALHO
 */      
 
-header{
+header {
     background-image: url(imagens/fundo001.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top, left;
-    height: 200px;
+    background-position: center, center;
+    height: 50vw;
     background-color: rgba(0, 0, 0, 0.342);
 }
-#desfoque{
+#desfoque {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.336);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #conteudo_do_nome {
     color: white;
-    width: 154px;
-    height: 70px;
-    padding: 5px;
+    width: 35vw;
+    height: 19vw;
     border-radius: 10px;
     position: relative;
-    top: 64%;
-    left: 45%;
-    transform: translate(-50px, -50px);
+    top: 2vw;
 }
+
 #nome_principal{
     display: flex;
     align-items: flex-end;
@@ -65,13 +66,13 @@ header{
 
 h1{
     font-family: var(--font03);
-    font-size: 30px;
+    font-size: 7vw;
     color: black;
 }
 p{
     font-family: var(--font03);
     margin-left: 2px;
-    font-size: 25px;
+    font-size: 5vw;
 }
 
 /*                                     PARTE DAS MIDIAS
