--- a/style.css
+++ b/style.css
@@ -24,7 +24,15 @@
     padding: 0px;
     box-sizing: border-box;
 }
-
+h2{
+    font-family: var(--font02);
+    font-size: 4vw;
+    text-align: center;
+    padding: 0px 0px 40px 0px;
+}
+section{
+    padding: 10vw 0px;
+}
 /*                                   CONFIGURAÇÃO DO CABEÇALHO
 */      
 
@@ -69,7 +77,7 @@ h1{
     font-size: 7vw;
     color: black;
 }
-p{
+#nome_principal, #sobrenome > p{
     font-family: var(--font03);
     margin-left: 2px;
     font-size: 5vw;
@@ -77,23 +85,13 @@ p{
 
 /*                                     PARTE DAS MIDIAS
 */
-
-#midias{
-    height: 250px;
-}
-h2{
-    font-family: var(--font02);
-    font-size: 18px;
-    text-align: center;
-    padding: 40px 0px;
-}
 aside{
     display: flex;
     width: 100%;
     justify-content: center;
 }
 img{
-    width: 40px;    
+    width: 8vw;    
     border-radius: 100%;
     margin: 20px;  
 }
@@ -102,35 +100,23 @@ img{
 */
 
 #saibamais{
-    height: 400px;
     background-color: black;
     color: white;
 }
-
-h2{
-    font-family: var(--font02);
-    font-size: 18px;
-    text-align: center;
-    padding: 40px 0px;
-}
 #cxtexto01{
-    background-color: #b0b0b067;
     padding: 10px;
     border-radius: 10px;
     width: 90%;
     margin: auto;
 }
 #cxtexto01 > p{
-    font-size: 15px;
+    font-size: 2.5vw;
     font-family: var(--font02);
 }
 
 /*                              PARTE DOS CONHECIMENTOS
 */
 
-#conhecimentos{
-    height: 250px;
-}
 #conhecimentos > h2{
     padding: 50px 0px;
 }
@@ -141,7 +127,6 @@ h2{
 #projetos{
     background-color: black;
     color: white;
-    height: 300px;
 }
 .caixas_projetos{
     display: flex;
@@ -150,7 +135,7 @@ h2{
 }
 .nomes_projetos{
     font-family: var(--font02);
-    font-size: 10px;
+    font-size: 2vw;
 }
 
 /*                          PARTE DA EMPRESA
@@ -158,7 +143,6 @@ h2{
 
 #empresa{
     color: black;
-    height: 350px;
 }
 #box_flex{
     display: flex;
@@ -168,19 +152,19 @@ h2{
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
-    width: 50%;
+    width: 55vw;
     background-color: #b0b0b067;
     margin-left: 20px;
     color: black;
 }
 #cxtexto02 > p{
-    font-size: 10px;
+    font-size: 2.5vw;
     font-family: var(--font02);
 }
 
 #img_do_site{
-    height: 100px;
-    width: 30%;
+    height: 30vw;
+    width: 30vw;
     background-image: url(imagens/logo-lery.png);
     background-size: cover;
     background-position: center, center;
@@ -195,7 +179,6 @@ h2{
 #final{
     background-color: black;
     color: white;
-    height: 300px;
 }
 #final > p{
     font-family: var(--font02);
