--- a/mediacriyes.css
+++ b/mediacriyes.css
@@ -7,3 +7,67 @@
     Desktoop: de 992px até 1200px; 
     Grandes telas: acima de 1200px: 
 */
+
+@media screen and (min-width: 768px){
+    img:hover{
+        box-shadow: 0px 0px 10px white;
+    }
+}
+@media screen and (min-width: 992px){
+    #nome_principal, #sobrenome > p{
+        font-family: var(--font03);
+        margin-left: 2px;
+        font-size: 40px;
+    }
+    
+    h1 {
+        font-family: var(--font03);
+        font-size: 70px;
+        color: black;
+        margin-bottom: -8px;
+    }
+    h2{
+        font-size: 40px;
+    }
+    img{
+        width: 80px ;
+    }
+    #cxtexto01 > p {
+        font-size: 20px;
+        width: 900px;
+        text-align: justify;
+        margin: auto;
+    }
+    #midias > aside > div > a > img:hover{
+        box-shadow: 0px 0px 20px black;
+    }
+    #conhecimentos > aside > .logos > img:hover{
+        box-shadow: 0px 0px 20px black;
+    }
+    .nomes_projetos {
+        font-size: 15px;
+    }
+    #cxtexto02 > p {
+        font-size: 27px;
+    }
+    #img_do_site {
+        height: 250px;
+        width: 300px;
+    }
+    #box_flex {
+        justify-content: center;
+    }
+    #final{
+        padding: 20px 0px;
+        height: 600px;
+    }
+    #final > p {
+        font-size: 20px;
+    }
+    #final > h2{
+        padding: 101px 0px;
+    }
+    #final > aside{
+        padding-top: 100px;
+    }
+}
