Atualização do cabeçalho
Mudei a imagem de fundo e fiz uma melhora na imagem.

--- a/style.css
+++ b/style.css
@@ -37,10 +37,11 @@ section{
 */      
 
 header {
-    background-image: url(imagens/fundo001.png);
+    background-image: url(imagens/fundo001.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center, center;
+    background-position: top, center;
+    background-attachment: fixed;
     height: 50vw;
     background-color: rgba(0, 0, 0, 0.342);
 }
